USEN_YSUMAxx_DataPkg_R2012.07.25(usendz_ysumaxx_zlb)/SOURCE/CH341官方DEMO例程/CH341VB/CH341DLL.BAS


Declare Function CH341BitStreamSPI Lib "CH341DLL.DLL" (ByVal iIndex As Long, ByVal iLength As Long, ByRef ioBuffer As Any) As Boolean
' CH341BitStreamSPI 处理SPI位数据流,4线/5线接口,时钟线为DCK/D3引脚,输出数据线为DOUT/DOUT2引脚,输入数据线为DIN/DIN2引脚,片选线为D0/D1/D2,速度约8K位*2
' iIndex,  指定CH341设备序号
' iLength, 准备传输的数据位数,一次最多896,建议不超过256
' ioBuffer 指向一个缓冲区,放置准备从DOUT/DOUT2/D2-D0写出的数据,返回后是从DIN/DIN2读入的数据
'/* SPI时序: DCK/D3引脚为时钟输出, 默认为低电平, DOUT/D5和DOUT2/D4引脚在时钟上升沿之前输出, DIN/D7和DIN2/D6引脚在时钟下降沿之后输入 */
'/* ioBuffer中的一个字节共8位分别对应D7-D0引脚, 位5输出到DOUT, 位4输出到DOUT2, 位2-位0输出到D2-D0, 位7从DIN输入, 位6从DIN2输入, 位3数据忽略 */
'/* 在调用该API之前,应该先调用CH341Set_D5_D0设置CH341的D5-D0引脚的I/O方向,并设置引脚的默认电平 */

Declare Function CH341SetBufUpload Lib "CH341DLL.DLL" (ByVal iIndex As Long, ByVal iEnableOrClear As Long) As Boolean  ' 为0则禁止内部缓冲上传模式,使用直接上传,非0则启用内部缓冲上传模式并清除缓冲区中的已有数据
' CH341SetBufUpload  ' 设定内部缓冲上传模式
' iIndex,          0指定CH341设备序号,0对应第一个设备
' iEnableOrClear  为0则禁止内部缓冲上传模式,使用直接上传,非0则启用内部缓冲上传模式并清除缓冲区中的已有数据
' 如果启用内部缓冲上传模式,那么CH341驱动程序创建线程自动接收USB上传数据到内部缓冲区,同时清除缓冲区中的已有数据,当应用程序调用CH341ReadData后将立即返回缓冲区中的已有数据

Declare Function CH341QueryBufUpload Lib "CH341DLL.DLL" (ByVal iIndex As Long) As Long
' CH341QueryBufUpload   查询内部上传缓冲区中的已有数据包个数,成功返回数据包个数,出错返回-1
' iIndex                指定CH341设备序号,0对应第一个设备

Declare Function CH341SetBufDownload Lib "CH341DLL.DLL" (ByVal iIndex As Long, ByVal iEnableOrClear As Long) As Boolean
'  CH341SetBufDownload  设定内部缓冲下传模式
'  iIndex,              指定CH341设备序号,0对应第一个设备
'  iEnableOrClear       为0则禁止内部缓冲下传模式,使用直接下传,非0则启用内部缓冲下传模式并清除缓冲区中的已有数据
'  如果启用内部缓冲下传模式,那么当应用程序调用CH341WriteData后将仅仅是将USB下传数据放到内部缓冲区并立即返回,而由CH341驱动程序创建的线程自动发送直到完毕

Declare Function CH341QueryBufDownload Lib "CH341DLL.DLL" (ByVal iIndex As Long) As Long    ' 指定CH341设备序号,0对应第一个设备
'  CH341QueryBufDownload  查询内部下传缓冲区中的剩余数据包个数(尚未发送),成功返回数据包个数,出错返回-1
'  iIndex                 指定CH341设备序号,0对应第一个设备


Declare Function CH341ResetInter Lib "CH341DLL.DLL" (ByVal iIndex As Long) As Boolean
'  CH341ResetInter   复位中断数据读操作
'  iIndex            指定CH341设备序号

Declare Function CH341ResetRead Lib "CH341DLL.DLL" (ByVal iIndex As Long) As Boolean
'  CH341ResetRead  复位数据块读操作
'  iIndex          指定CH341设备序号

Declare Function CH341ResetWrite Lib "CH341DLL.DLL" (ByVal iIndex As Long) As Boolean
'    CH341ResetRead    复位数据块读操作
'    iIndex            指定CH341设备序号

'typedef     VOID    ( CALLBACK  * mPCH341_NOTIFY_ROUTINE ) (  ' 设备事件通知回调程序
'    ULONG           iEventStatus );  ' 设备事件和当前状态(在下行定义): 0=设备拔出事件, 3=设备插入事件

Public Const CH341_DEVICE_ARRIVAL = 3               ' 设备插入事件,已经插入
Public Const CH341_DEVICE_REMOVE_PEND = 1         ' 设备将要拔出
Public Const CH341_DEVICE_REMOVE = 0              ' 设备拔出事件,已经拔出

Declare Function CH341SetDeviceNotify Lib "CH341DLL.DLL" (ByVal iIndex As Long, ByRef iDeviceID As String, ByVal iNotifyRoutine As Long) As Boolean
'  CH341SetDeviceNotify     设定设备事件通知程序
'  iIndex,                  指定CH341设备序号,0对应第一个设备
'  iDeviceID,               可选参数,指向字符串,指定被监控的设备的ID,字符串以\0终止
'  iNotifyRoutine           (函数地址)指定设备事件回调程序, 为NULL则取消事件通知, 否则在检测到事件时调用该程序


Declare Function CH341SetupSerial Lib "CH341DLL.DLL" (ByVal iIndex As Long, ByVal iParityMode As Long, ByVal iBaudRate As Long) As Boolean
'  CH341SetupSerial    设定CH341的串口特性,该API只能用于工作于串口方式的CH341芯片
'  iIndex,             指定CH341设备序号,0对应第一个设备
'  iParityMode,        指定CH341串口的数据校验模式: NOPARITY/ODDPARITY/EVENPARITY/MARKPARITY/SPACEPARITY
'  iBaudRate           指定CH341串口的通讯波特率值,可以是50至3000000之间的任意值

'/*  以下API可以用于工作于串口方式的CH341芯片,除此之外的API一般只能用于并口方式的CH341芯片
'    CH341OpenDevice
'    CH341CloseDevice
'    CH341SetupSerial
'    CH341ReadData
'    CH341WriteData
'    CH341SetBufUpload
'    CH341QueryBufUpload
'    CH341SetBufDownload
'    CH341QueryBufDownload
'    CH341SetDeviceNotify
'    CH341GetStatus
'  以上是主要API,以下是次要API
'    CH341GetVersion
'    CH341DriverCommand
'    CH341GetDrvVersion
'    CH341ResetDevice
'    CH341GetDeviceDescr
'    CH341GetConfigDescr
'    CH341SetIntRoutine
'    CH341ReadInter
'    CH341AbortInter
'    CH341AbortRead
'    CH341AbortWrite
'    CH341ReadI2C
'    CH341WriteI2C
'    CH341SetExclusive
'    CH341SetTimeout
'    CH341GetDeviceName
'    CH341GetVerIC
'    CH341FlushBuffer
'    CH341WriteRead
'    CH341ResetInter
'    CH341ResetRead
'    CH341ResetWrite
'*/
